--- a/docs/resident.css
+++ b/docs/resident.css
@@ -150,7 +150,7 @@
   }
 
   .landing{
-    background-image: url("../images/mount.jpg");
+    background-image: url("mount.jpg");
     background-size: cover;
     height: calc(100vh - 64px);
     position: relative;
